@@ -7,6 +7,7 @@ import com.learnjava.service.ReviewService;
 
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 import static com.learnjava.util.CommonUtil.stopWatch;
 import static com.learnjava.util.LoggerUtil.log;
@@ -14,21 +15,20 @@ import static com.learnjava.util.LoggerUtil.log;
 public class ProductServiceUsingCompletablaFuture {
     private ProductInfoService productInfoService;
     private ReviewService reviewService;
-    private InventoryService inventoryService;
+    private InventoryService inventoryervice;
 
     public ProductServiceUsingCompletablaFuture(ProductInfoService productInfoService, ReviewService reviewService) {
         this.productInfoService = productInfoService;
         this.reviewService = reviewService;
     }
 
-    public ProductServiceUsingCompletablaFuture(ProductInfoService productInfoService, ReviewService reviewService, InventoryService inventoryService) {
+    public ProductServiceUsingCompletablaFuture(ProductInfoService productInfoService, ReviewService reviewService, InventoryService inventoryervice) {
         this.productInfoService = productInfoService;
         this.reviewService = reviewService;
-        this.inventoryService = inventoryService;
+        this.inventoryervice = inventoryervice;
     }
 
     public Product retrieveProductDetails(String productId) {
-        stopWatch.reset();
         stopWatch.start();
 
         CompletableFuture<ProductInfo> cfProductInfo = CompletableFuture
@@ -45,6 +45,7 @@ public class ProductServiceUsingCompletablaFuture {
         return product;
     }
 
+
     public CompletableFuture<Product> retrieveProductDetails_approach2(String productId) {
 
         CompletableFuture<ProductInfo> cfProductInfo = CompletableFuture
@@ -54,51 +55,96 @@ public class ProductServiceUsingCompletablaFuture {
 
         return cfProductInfo
                 .thenCombine(cfReview, (productInfo, review) -> new Product(productId, productInfo, review));
+
     }
 
+
     public Product retrieveProductDetailsWithInventory(String productId) {
-        stopWatch.reset();
         stopWatch.start();
+
         CompletableFuture<ProductInfo> cfProductInfo = CompletableFuture
                 .supplyAsync(() -> productInfoService.retrieveProductInfo(productId))
                 .thenApply(productInfo -> {
-                    List<ProductOption> productOptionList = updateInventory_approach2(productInfo);
-                    productInfo.setProductOptions(productOptionList);
+                    productInfo.setProductOptions(updateInventory(productInfo));
                     return productInfo;
                 });
+
+
         CompletableFuture<Review> cfReview = CompletableFuture
                 .supplyAsync(() -> reviewService.retrieveReviews(productId));
 
         Product product = cfProductInfo
-                .thenCombine(cfReview, (productInfo, review) -> new Product(productId, productInfo, review)).join();
+                .thenCombine(cfReview, (productInfo, review) -> new Product(productId, productInfo, review))
+                .join(); //block the thread
+
+        stopWatch.stop();
+        log("Total Time Taken : " + stopWatch.getTime());
+        return product;
+    }
+
+    public Product retrieveProductDetailsWithInventory_approach2(String productId) {
+        stopWatch.start();
+
+        CompletableFuture<ProductInfo> cfProductInfo = CompletableFuture
+                .supplyAsync(() -> productInfoService.retrieveProductInfo(productId))
+                .thenApply(productInfo -> {
+                    productInfo.setProductOptions(updateInventory_approach2(productInfo));
+                    return productInfo;
+                });
+
+
+        CompletableFuture<Review> cfReview = CompletableFuture
+                .supplyAsync(() -> reviewService.retrieveReviews(productId))
+                .exceptionally((e) -> {
+                    log("Handled the Exception in reviewService : " + e.getMessage());
+                    return Review.builder()
+                            .noOfReviews(0).overallRating(0.0)
+                            .build();
+                });
+
+        Product product = cfProductInfo
+                .thenCombine(cfReview, (productInfo, review) -> new Product(productId, productInfo, review))
+                .whenComplete(((product1, ex) -> {
+                    log("Inside WhenComplete : "+ product1 + " and the exception is " + ex);
+                }))
+                .join(); //block the thread
+
         stopWatch.stop();
         log("Total Time Taken : " + stopWatch.getTime());
         return product;
     }
 
     private List<ProductOption> updateInventory(ProductInfo productInfo) {
-        return productInfo.getProductOptions()
+
+        List<ProductOption> productOptionList = productInfo.getProductOptions()
                 .stream()
                 .map(productOption -> {
-                    Inventory inventory = inventoryService.addInventory(productOption);
+                    Inventory inventory = inventoryervice.addInventory(productOption);
                     productOption.setInventory(inventory);
                     return productOption;
-                }).toList();
+                })
+                .collect(Collectors.toList());
+        return productOptionList;
+
     }
 
     private List<ProductOption> updateInventory_approach2(ProductInfo productInfo) {
-            List<CompletableFuture<ProductOption>> productOptionsListFuture = productInfo.getProductOptions()
+
+        List<CompletableFuture<ProductOption>> productOptionList = productInfo.getProductOptions()
                 .stream()
                 .map(productOption -> {
-                    return CompletableFuture.supplyAsync(() -> inventoryService.addInventory(productOption))
+                    return CompletableFuture.supplyAsync(() -> inventoryervice.addInventory(productOption))
                             .thenApply(inventory -> {
                                 productOption.setInventory(inventory);
                                 return productOption;
                             });
-                }).toList();
-            return productOptionsListFuture.stream()
-                    .map(CompletableFuture::join).toList();
+                })
+                .collect(Collectors.toList());
+
+        return productOptionList.stream().map(CompletableFuture::join).collect(Collectors.toList());
+
     }
+
 
     public static void main(String[] args) {
 
